tests/files/flow_controller_tests/should_run/084.cmdr
x = 14.5;
print tanh(x);