tests/files/flow_controller_tests/should_fail/067.cmdr
x = true;
print tanh(x);